--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<Select id="myList">
+<option value="R">Red</option>
+<option value="B" SELECTED>Blue</option>
+<option value="Y">Yellow</option>
+<option value="W">White</option>
+</select>
+  
+<input type="button" onClick="getListValue();" value="Get Value">
+ <input type="text" id="myTextBoxResult" value="">
+
+    
 </head>
 <body>
     
